--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   "dependencies": {
     "body-parser": "1.17.1",
     "bytes": "3.0.0",
-    "sequelize": "3.20.0",
-    "mysql": "2.10.2",
+    "cors": "^2.8.5",
     "debug": "2.6.3",
     "express": "4.15.2",
+    "moment": "2.18.1",
     "morgan": "1.8.1",
     "multer": "1.3.0",
+    "mysql": "2.10.2",
     "qn": "1.3.0",
-    "moment": "2.18.1",
+    "sequelize": "3.20.0",
     "serve-favicon": "2.4.2"
   }
 }
